# sit-tagger

./: .editorconfig  MANIFEST.in  README.md  README.rst  app.py  birdeyegallery.py  canvas.py  dbtag.py  fullscreenviewer.py  imagewidgets.py  pyproject.toml  setup.cfg  setup.py  sittagger.desktop  start.sh  taglib.py  tagwidgets.py  thumbnail.py  thumbnailmaker.py
sittager/: app.py  canvas.py  fullscreenviewer.py  tagwidgets.py  videowidgets.py
sittagger/: __init__.py  __main__.py  app.py  birdeye.py  canvas.py  captiontools.py  captionwidgets.py  cli.py  dbtag.py  dirwidgets.py  fileoperationdialog.py  fm_interop.py  fsops.py  fullscreenviewer.py  imagewidgets.py  mainwindow.ui  tagwidgets.py  thumbnailmaker.py  videogrid.py  videowidgets.py
tests/: conftest.py  test_captiontools.py  test_dbtag.py
