[metadata]
name = sittagger
version = attr: sittagger.__version__

description = Image viewer with user-labels tag database

long_description = file: README.rst
keywords = image, photo, viewer, browser, database, tagging, tag, label, labelling, python
url = https://github.com/hydrargyrum/sit-tagger

license = WTFPLv2
author = Hg
author_email = dev@indigo.re

classifier =
    Development Status :: 5 - Production/Stable  
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: Public Domain
    Topic :: Desktop Environment :: File Managers
    Topic :: Multimedia :: Graphics :: Viewers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only


[options]
zip_safe = 1
python_requires = >=3.4
install_requires =
    PyQt5
    pyxdg
    vignette
packages = find:

[options.entry_points]
console_scripts =
    sit-tagger-cli=sittagger.cli:main

gui_scripts =
    sit-tagger=sittagger.app:main

[bdist_wheel]
universal = 1
